<resources>
    <string name="app_name" translatable="false">SplitTheBill</string>

    <!-- Activity Main strings -->
    <string name="main_activity_toolbar_title" translatable="false">Split the Bill</string>
    <string name="main_activity_toolbar_subtitle" >Total Purchase Amount: R$</string>
    <string name="floating_action_button_description">Add a new participant</string>
    <string name="menu_item_add_participant">Add a new participant</string>
    <string name="menu_item_remove_participant">Delete this participant</string>
    <string name="toast_remove_participant">Participant removed!</string>
    <string name="menu_item_edit_participant">Edit this participant</string>

    <!-- Tile Participant strings -->
    <string name="participant_name_placeholder" translatable="false">Placeholder Name</string>
    <string name="participant_amount_spent">Spent: R$</string>
    <string name="participant_amount_outstanding_placeholder">Outstanding: R$</string>
    <string name="participant_amount_spent_value_placeholder" translatable="false">XX,XX</string>
    <string name="participant_amount_neutral">Balance neutral: R$</string>
    <string name="participant_amount_to_receive">To receive: R$</string>
    <string name="participant_amount_to_pay">To pay: R$</string>
    <string name="participant_amount_outstanding_value_placeholder" translatable="false">XX,XX</string>
    <string name="participant_items_bought">Items bought:</string>
    <string name="participant_items_bought_value_placeholder" translatable="false">item1, item2, item3</string>

    <!-- Activity Participant strings -->
    <string name="participant_activity_title_add">Add a new participant!</string>
    <string name="participant_activity_title_edit">Edit this participant</string>
    <string name="participant_activity_title_view">Participant details</string>
    <string name="participant_activity_subtitle">Participant details</string>
    <string name="participant_name_hint">Name</string>
    <string name="participant_amount_spent_hint">Amount spent</string>
    <string name="participant_item_bought_1_hint">1st item bought</string>
    <string name="participant_item_bought_2_hint">2nd item bought</string>
    <string name="participant_item_bought_3_hint">3rd item bought</string>
    <string name="participant_activity_save">Save!</string>
    <string name="participant_activity_cancel">Cancel</string>
    <string name="participant_activity_return">Return</string>
</resources>