<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <TextView
        android:id="@+id/nameTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/participant_name_placeholder"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/amountSpentTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/participant_amount_spent"
        app:layout_constraintTop_toBottomOf="@id/nameTv"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/amountSpentValueTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="2dp"
        android:text="@string/participant_amount_spent_value_placeholder"
        app:layout_constraintTop_toBottomOf="@id/nameTv"
        app:layout_constraintStart_toEndOf="@id/amountSpentTv"
        />

    <TextView
        android:id="@+id/amountOutstandingTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/participant_amount_outstanding_placeholder"
        app:layout_constraintEnd_toStartOf="@id/amountOutstandingValueTv"
        app:layout_constraintTop_toBottomOf="@id/nameTv"
        />

    <TextView
        android:id="@+id/amountOutstandingValueTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="2dp"
        android:text="@string/participant_amount_outstanding_value_placeholder"
        app:layout_constraintTop_toBottomOf="@id/nameTv"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>